--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
     <div class="hero">
         <div class="hero__bg bg">
             <div class="hero__navbar navbar">
-                <input type="checkbox" class="hero__burger-lines-check" />
+                <input type="checkbox" class="hero__burger_lines_check" />
 
-                <div class="hero__burger-lines">
-                    <span class="hero__burger-line"></span>
-                    <span class="hero__burger-line"></span>
-                    <span class="hero__burger-line"></span>
+                <div class="hero__burger_lines">
+                    <span class="hero__burger_line"></span>
+                    <span class="hero__burger_line"></span>
+                    <span class="hero__burger_line"></span>
                 </div>
 
                 <div class="navbar__logo"><img class="navbar__logo-pic" src="img/hero/logo.svg"></div>
-                <ul class="navbar__navbar-items navbar-items">
-                    <li class="navbar-items__item">Home</li>
-                    <li class="navbar-items__item">Your benefits</li>
-                    <li class="navbar-items__item">Our process</li>
-                    <li class="navbar-items__item">Our works</li>
-                    <li class="navbar-items__item">Testimonials</li>
-                    <li class="navbar-items__item">Start a project</li>
+                <ul class="navbar__navbar_items navbar_items">
+                    <li class="navbar_items__item">Home</li>
+                    <li class="navbar_items__item">Your benefits</li>
+                    <li class="navbar_items__item">Our process</li>
+                    <li class="navbar_items__item">Our works</li>
+                    <li class="navbar_items__item">Testimonials</li>
+                    <li class="navbar_items__item">Start a project</li>
                 </ul>
                 <div class="navbar__button button"><span class="button__text">Get started</span></div>
             </div>
             <div class="hero__title"><span class="hero__main-title">A Digital Product Design Agency</span></div>
-            <div class="hero__subtitle"><span class="hero__main-subtitle">We are Creative and Professional Digital
+            <div class="hero__subtitle"><span class="hero__subtitle_text">We are Creative and Professional Digital
                     Agency</span></div>
             <div class="hero_button button"><span class="button__text">Get started</span></div>
 
 
         </div>
         <div class="container">
-            <div class="hero__image-block"><img class="hero__image" src="img/hero/hero-main.png"></div>
+            <div class="hero__image_block"><img class="hero__image" src="img/hero/hero-main.png"></div>
         </div>
     </div>
 
@@ -248,33 +248,33 @@
                 <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/10-civicrm.svg"></div>
             </div>
             <div class="brands__footer">
-                <span class="brands__footer-text">You're going to be in good company. We work with world's leading
+                <span class="brands__footer_text">You're going to be in good company. We work with world's leading
                     brands.</span>
             </div>
         </div>
     </div>
 
-    <div class="start-working">
+    <div class="start_working">
         <div class="container">
-            <div class="start-working__left-right">
-                <div class="start-working__left">
+            <div class="start_working__left_right">
+                <div class="start_working__left">
                     <div class="title">
                         <span class="title__white">start with us</span>
                     </div>
-                    <div class="start-working__subtitle">
+                    <div class="start_working__subtitle">
                         <span class="subtitle__white">Start working faster today</span>
                     </div>
-                    <div class="start-working__desc">
-                        <span class="start-working__desc_text">We know the best solution for all of your business ideas
+                    <div class="start_working__desc">
+                        <span class="start_working__desc_text">We know the best solution for all of your business ideas
                             and we can help you solve all business problems</span>
                     </div>
                     <div class="button">
                         <span class="button__text">Get started</span>
                     </div>
                 </div>
-                <div class="start-working__right">
-                    <div class="start-working__chart">
-                        <img class="start-working__chart-img" src="img/start-working/chart.png">
+                <div class="start_working__right">
+                    <div class="start_working__chart">
+                        <img class="start_working__chart_img" src="img/start_working/chart.png">
                     </div>
                 </div>
             </div>
@@ -293,7 +293,7 @@
                     <a href="">Testimonials</a>
                     <a href="">Start a project</a>
                 </div>
-                <div class="footer__social-media-links">
+                <div class="footer__social_media_links">
                     <a href="" class="footer__social-media-link">
                         <img class="footer__social-media-link-logo" src="img/footer/fb-logo.png">
                     </a>
@@ -307,11 +307,11 @@
             </div>
             <div class="footer__credentials">
                 <div class="footer_copyright">
-                    <span class="footer_copyright-text">© 2021 Company</span>
+                    <span class="footer__copyright_text">© 2021 Company</span>
                 </div>
-                <div class="footer__privacy-links">
-                    <a href=# class="footer__privacy-link">Privacy policy</a>
-                    <a href=# class="footer__privacy-link">Term of service</a>
+                <div class="footer__privacy_links">
+                    <a href=# class="footer__privacy_link">Privacy policy</a>
+                    <a href=# class="footer__privacy_link">Term of service</a>
                 </div>
             </div>
         </div>
