--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="what_you_get_cards">
                     <div class="what_you_get_cards__card">
-                        <div class="card__icon" style="background-color: #FFE7DB;">
+                        <div class="card__icon" id="card__icon-grow">
                             <img class="card__icon_pic" src="img/what_you_get/grow.svg">
                         </div>
                         <div class="card__title">
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="what_you_get_cards__card">
-                        <div class="card__icon" style="background-color: #E7F2EF;"><img class="card__icon_pic"
+                        <div class="card__icon" id="card__icon-sales"><img class="card__icon_pic"
                                 src="img/what_you_get/sales.svg"></div>
                         <div class="card__title">
                             <span class="card__title_text">Drive more sales</span>
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                     <div class="what_you_get_cards__card">
-                        <div class="card__icon" style="background-color: #FAF3D8;">
+                        <div class="card__icon" id="card__icon-expert">
                             <img class="card__icon_pic" src="img/what_you_get/expert.svg">
                         </div>
                         <div class="card__title">
@@ -100,9 +100,8 @@
                                 work together more collaboratively</div>
                         </span>
                     </div>
-
                     <div class="what_you_get_cards__card">
-                        <div class="card__icon" style="background-color: #C0F2EF;"><img class="card__icon_pic"
+                        <div class="card__icon" id="card__icon-ux"><img class="card__icon_pic"
                                 src="img/what_you_get/ux.svg">
                         </div>
                         <div class="card__title">
@@ -117,7 +116,7 @@
                         </div>
                     </div>
                     <div class="what_you_get_cards__card">
-                        <div class="card__icon" style="background-color: #EDE7F2;">
+                        <div class="card__icon" id="card__icon-audit">
                             <img class="card__icon_pic" src="img/what_you_get/audit.svg">
                         </div>
                         <div class="card__title">
@@ -131,7 +130,7 @@
                         </div>
                     </div>
                     <div class="what_you_get_cards__card">
-                        <div class="card__icon" style="background-color: #D8F0FA;">
+                        <div class="card__icon" id="card__icon-data">
                             <img class="card__icon_pic" src="img/what_you_get/data.svg">
                         </div>
                         <div class="card__title">
@@ -171,7 +170,7 @@
                                 src="img/our_process/graphs/bussines-audit-graph.png">
                         </div>
                         <div class="our_process__card_text">
-                            <div class="our_process__card_icon" style="background-color: #DAE6FF;">
+                            <div class="our_process__card_icon" id="our_process__card_icon-business_audit">
                                 <img class="our_process__card-svg" src="img/our_process/icons/business-audit-icon.svg">
                             </div>
                             <div class="our_process__card_title">
@@ -186,13 +185,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="our_process_cards__between_card">
+                        <div class="our_process_cards__border_div"></div>
+                        <div></div>
+                    </div>
                     <div class="our_process__card">
                         <div class="our_process__card_image">
                             <img class="our_process__card_image_pic"
                                 src="img/our_process/graphs/data-tracking-graph.png">
                         </div>
                         <div class="our_process__card_text">
-                            <div class="our_process__card_icon" style="background-color: #E9E5FF;">
+                            <div class="our_process__card_icon" id="our_process__card_icon-data_tracking">
                                 <img class="our_process__card-svg" src="img/our_process/icons/data-tracking-icon.svg">
                             </div>
                             <div class="our_process__card_title">
@@ -204,12 +207,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="our_process_cards__between_card">
+                        <div class="our_process_cards__border_div"></div>
+                        <div></div>
+                    </div>
                     <div class="our_process__card">
                         <div class="our_process__card_image">
                             <img class="our_process__card_image_pic" src="img/our_process/graphs/results-graph.png">
                         </div>
                         <div class="our_process__card_text">
-                            <div class="our_process__card_icon" style="background-color: #CEEDFF"><img
+                            <div class="our_process__card_icon" id="our_process__card_icon-results"><img
                                     class="our_process__card-svg" src="img/our_process/icons/results-icon.svg"></div>
                             <div class="our_process__card_title">
                                 <span class="our_process__card_title_text">Results</span>
