--- a/index.html
+++ b/index.html
@@ -243,16 +243,16 @@
                     brands</span>
             </div>
             <div class="brands__logos">
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/01-mazda.svg"></div>
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/02-atlassian.svg"></div>
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/03-smashing.svg"></div>
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/04-qantas.svg"></div>
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/05-buysellads.svg"></div>
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/06-nitro.svg"></div>
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/07-cssmania.svg"></div>
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/08-popsugar.svg"></div>
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/09-talentbin.svg"></div>
-                <div class="brands__logo"><img class="brands__logo-svg" src="img/brands/10-civicrm.svg"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/01-mazda.png"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/02-atlassian.png"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/03-smashing.png"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/04-qantas.png"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/05-buysellads.png"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/06-nitro.png"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/07-cssmania.png"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/08-popsugar.png"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/09-talentbin.png"></div>
+                <div class="brands__logo"><img class="brands__logo_png" src="img/brands/10-civicrm.png"></div>
             </div>
             <div class="brands__footer">
                 <span class="brands__footer_text">You're going to be in good company. We work with world's leading
