--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
                 </ul>
                 <div class="navbar__button button"><span class="button__text">Get started</span></div>
             </div>
+            <ul class="navbar_items-medium_screens">
+                <li class="navbar_items__item">Home</li>
+                <li class="navbar_items__item">Your benefits</li>
+                <li class="navbar_items__item">Our process</li>
+                <li class="navbar_items__item">Our works</li>
+                <li class="navbar_items__item">Testimonials</li>
+                <li class="navbar_items__item">Start a project</li>
+            </ul>
             <div class="hero__title"><span class="hero__main-title">A Digital Product Design Agency</span></div>
             <div class="hero__subtitle"><span class="hero__subtitle_text">We are Creative and Professional Digital
                     Agency</span></div>
