--- a/index.html
+++ b/index.html
@@ -301,12 +301,24 @@
             <div class="footer__navbar">
                 <img class="footer__logo" src="img/footer/logo.png">
                 <div class="footer__links">
-                    <a href="">Home</a>
-                    <a href="">Your benefits</a>
-                    <a href="">Our process</a>
-                    <a href="">Our works</a>
-                    <a href="">Testimonials</a>
-                    <a href="">Start a project</a>
+                    <div class="footer__link_div">
+                        <a href="" class="footer__link">Home</a>
+                    </div>
+                    <div class="footer__link_div">
+                        <a href="" class="footer__link">Your benefits</a>
+                    </div>
+                    <div class="footer__link_div">
+                        <a href="" class="footer__link">Our process</a>
+                    </div>
+                    <div class="footer__link_div">
+                        <a href="" class="footer__link">Our works</a>
+                    </div>
+                    <div class="footer__link_div">
+                        <a href="" class="footer__link">Testimonials</a>
+                    </div>
+                    <div class="footer__link_div">
+                        <a href="" class="footer__link">Start a project</a>
+                    </div>
                 </div>
                 <div class="footer__social_media_links">
                     <a href="" class="footer__social-media-link">
