--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 
                 <div class="navbar__logo"><img class="navbar__logo-pic" src="img/hero/logo.svg"></div>
                 <ul class="navbar__navbar_items navbar_items">
-                    <li class="navbar_items__item">Home</li>
-                    <li class="navbar_items__item">Your benefits</li>
-                    <li class="navbar_items__item">Our process</li>
-                    <li class="navbar_items__item">Our works</li>
-                    <li class="navbar_items__item">Testimonials</li>
-                    <li class="navbar_items__item">Start a project</li>
+                    <li class="navbar_items__item"><a href="" class="navbar_items__link">Home</a></li>
+                    <li class="navbar_items__item"><a href="" class="navbar_items__link">Your benefits</a></li>
+                    <li class="navbar_items__item"><a href="" class="navbar_items__link">Our process</a></li>
+                    <li class="navbar_items__item"><a href="" class="navbar_items__link">Our works</a></li>
+                    <li class="navbar_items__item"><a href="" class="navbar_items__link">Testimonials</a></li>
+                    <li class="navbar_items__item"><a href="" class="navbar_items__link">Start a project</a></li>
                 </ul>
                 <div class="navbar__button button"><span class="button__text">Get started</span></div>
             </div>
             <ul class="navbar_items-medium_screens">
-                <li class="navbar_items__item">Home</li>
-                <li class="navbar_items__item">Your benefits</li>
-                <li class="navbar_items__item">Our process</li>
-                <li class="navbar_items__item">Our works</li>
-                <li class="navbar_items__item">Testimonials</li>
-                <li class="navbar_items__item">Start a project</li>
+                <li class="navbar_items__item"><a href="" class="navbar_items__link">Home</a></li>
+                <li class="navbar_items__item"><a href="" class="navbar_items__link">Your benefits</a></li>
+                <li class="navbar_items__item"><a href="" class="navbar_items__link">Our process</a></li>
+                <li class="navbar_items__item"><a href="" class="navbar_items__link">Our works</a></li>
+                <li class="navbar_items__item"><a href="" class="navbar_items__link">Testimonials</a></li>
+                <li class="navbar_items__item"><a href="" class="navbar_items__link">Start a project</a></li>
             </ul>
             <div class="hero__title"><span class="hero__main-title">A Digital Product Design Agency</span></div>
             <div class="hero__subtitle"><span class="hero__subtitle_text">We are Creative and Professional Digital
@@ -321,15 +321,21 @@
                     </div>
                 </div>
                 <div class="footer__social_media_links">
-                    <a href="" class="footer__social-media-link">
-                        <img class="footer__social-media-link-logo" src="img/footer/fb-logo.png">
-                    </a>
-                    <a href="" class="footer__social-media-link">
-                        <img class="footer__social-media-link-logo" src="img/footer/inst-logo.png">
-                    </a>
-                    <a href="" class="footer__social-media-link">
-                        <img class="footer__social-media-link-logo" src="img/footer/twt-logo.png">
-                    </a>
+                    <div class="footer__social_media_link_div">
+                        <a href="" class="footer__social-media-link">
+                            <img class="footer__social-media-link-logo" src="img/footer/fb-logo.png">
+                        </a>
+                    </div>
+                    <div class="footer__social_media_link_div">
+                        <a href="" class="footer__social-media-link">
+                            <img class="footer__social-media-link-logo" src="img/footer/inst-logo.png">
+                        </a>
+                    </div>
+                    <div class="footer__social_media_link_div">
+                        <a href="" class="footer__social-media-link">
+                            <img class="footer__social-media-link-logo" src="img/footer/twt-logo.png">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="footer__credentials">
@@ -337,8 +343,12 @@
                     <span class="footer__copyright_text">© 2021 Company</span>
                 </div>
                 <div class="footer__privacy_links">
-                    <a href=# class="footer__privacy_link">Privacy policy</a>
-                    <a href=# class="footer__privacy_link">Term of service</a>
+                    <div class="footer__privacy_link_div">
+                        <a href=# class="footer__privacy_link">Privacy policy</a>
+                    </div>
+                    <div class="footer__privacy_link_div">
+                        <a href=# class="footer__privacy_link">Term of service</a>
+                    </div>
                 </div>
             </div>
         </div>
